# fft-18

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  Dockerfile  README.md  build.sh  compile.sh  image_compression_with_docker.sh  mpi only run.sh  mpi_run.sh  mpi_run_inverse.sh  plot_mpi.sh  run.sh  run_container.sh
.github/workflows/: ci.yml
CUDA_FFT/1D/: cuda_fourier.hpp  fft_output.csv  header.hpp  main  main.cu  main_class.hpp  random_generator.hpp  sinusoidal_generator.hpp  static_header.hpp
CUDA_FFT/2D/: gaussian_2d.hpp  header.hpp  main  main.cu  main_class_2d.hpp  random_2d.hpp  sinusoidal_2d.hpp  static_header.hpp
CUDA_FFT/2D/image_converter/: img_to_matrix.py
FFT/include/: Cooley-Tukey-CUDA.hpp  Cooley-Tukey-parallel.hpp  Cooley-Tukey.hpp  MPIHelper.h  VectorInitializer.h  dwt_transform.h  fft_transform.h  optimized_fft.h  signal_generator.h  signal_utils.h  signal_visualizer.h  transform.h
FFT/src/: Cooley-Tukey-parallel.cpp  Cooley-Tukey.cpp  ParallelIterativeFFT.cpp  dwt_transform.cpp  fft_transform.cpp  main.cpp  optimized_fft.cpp  signal_generator.cpp  signal_utils.cpp  signal_visualizer.cpp  visualization_demo.cpp
OUTPUT_RESULT/: iterative_fft_timings.txt  recursive_fft_timings.txt  recursive_fft_timings_2d.txt  timings_parallel_fft.txt  timings_parallel_fft_128.txt  timings_parallel_fft_32.txt  timings_parallel_fft_64.txt
OUTPUT_RESULT/CUDA/: timings_parallel_fft_256.txt
OUTPUT_RESULT/CUDA/1D/: timings_parallel_fft_32.txt
OUTPUT_RESULT/CUDA/2D/: timings_parallel_fft_128.txt  timings_parallel_fft_32.txt
OUTPUT_RESULT/csv_output/: error_vs_threshold_band.csv  error_vs_threshold_band_percentage.csv  error_vs_threshold_magnitude.csv  error_vs_threshold_magnitude_percentage.csv  fft_magnitude.csv  fft_magnitude_filtered_10p_band.csv  fft_magnitude_filtered_10p_magnitude.csv  fft_magnitude_filtered_15p_band.csv  fft_magnitude_filtered_15p_magnitude.csv  fft_magnitude_filtered_1p_magnitude.csv  fft_magnitude_filtered_25p_band.csv  fft_magnitude_filtered_25p_magnitude.csv  fft_magnitude_filtered_40p_magnitude.csv  fft_magnitude_filtered_50p_magnitude.csv  fft_magnitude_filtered_5p_band.csv  fft_magnitude_filtered_5p_magnitude.csv  fft_magnitude_filtered_60p_band.csv  fft_magnitude_filtered_60p_magnitude.csv  fft_magnitude_filtered_75p_magnitude.csv  fft_magnitude_filtered_85p_magnitude.csv  fft_magnitude_filtered_99p_band.csv  fft_magnitude_filtered_99p_magnitude.csv  singular_values.csv
OUTPUT_RESULT/mpi/1D/: hybrid_p16_t1.txt  hybrid_p16_t16.txt  hybrid_p16_t4.txt  hybrid_p16_t8.txt  hybrid_p1_t16.txt  hybrid_p1_t4.txt  hybrid_p1_t8.txt  hybrid_p2_t4.txt  hybrid_p2_t8.txt  hybrid_p4_t2.txt  hybrid_p4_t4.txt  hybrid_p4_t8.txt  hybrid_p8_t4.txt  hybrid_p8_t8.txt
OUTPUT_RESULT/mpi/1D_inverse/: hybrid_p16_t1.txt  hybrid_p16_t16.txt  hybrid_p16_t4.txt  hybrid_p16_t8.txt  hybrid_p1_t16.txt  hybrid_p1_t4.txt  hybrid_p1_t8.txt  hybrid_p2_t4.txt  hybrid_p2_t8.txt  hybrid_p4_t2.txt  hybrid_p4_t4.txt  hybrid_p4_t8.txt  hybrid_p8_t4.txt  hybrid_p8_t8.txt
OUTPUT_RESULT/mpi/2D/: hybrid_p16_t1.txt  hybrid_p16_t16.txt  hybrid_p16_t4.txt  hybrid_p16_t8.txt  hybrid_p1_t16.txt  hybrid_p1_t4.txt  hybrid_p1_t8.txt  hybrid_p2_t4.txt  hybrid_p2_t8.txt  hybrid_p4_t4.txt  hybrid_p4_t8.txt  hybrid_p8_t4.txt  hybrid_p8_t8.txt
OUTPUT_RESULT/mpi/2D_inverse/: hybrid_p16_t1.txt  hybrid_p16_t16.txt  hybrid_p16_t4.txt  hybrid_p16_t8.txt  hybrid_p1_t16.txt  hybrid_p2_t4.txt  hybrid_p4_t2.txt  hybrid_p4_t4.txt  hybrid_p4_t8.txt  hybrid_p8_t4.txt  hybrid_p8_t8.txt
OUTPUT_RESULT/sequential/2D/: iterative_fft_timings.txt  recursive_fft_timings.txt
Python/: CUDA_1D_time_plot.py  CUDA_2D_time_plot.py  full_analysis.py  mpi.py  plot_1d.py  plot_2d.py  sequential_time_plot.py  time_plot.py
image_compression/include/: error_plot.hpp  fft_analysis_band.hpp  fft_analysis_magnitude.hpp  fft_utils.hpp  image_saver.hpp  svd_analysis.hpp
image_compression/src/: error_plot.cpp  fft_analysis_band.cpp  fft_analysis_magnitude.cpp  fft_utils.cpp  image_saver.cpp  svd_analysis.cpp
include/: abstract_transform.hpp  fourier_transform.hpp  fourier_transform_1d.hpp  iterative_fourier.hpp  matrix_utils.hpp  mpi_iterative_fourier.hpp  mpi_wrapper.hpp  parallel_fourier.hpp  recursive_fourier  recursive_fourier.hpp  save_result.hpp  timing_saver.h  vector_generator.hpp  vector_generator_gpu.hpp  vector_template.hpp
include/CUDA/: cuda_parallel_fft.hpp  static_header.hpp
output_result/: iterative_fft_timings_2d.txt
output_result/CUDA/1D/: timings_parallel_fft_1024.txt  timings_parallel_fft_128.txt  timings_parallel_fft_256.txt  timings_parallel_fft_64.txt
output_result/CUDA/2D/: timings_parallel_fft_256.txt  timings_parallel_fft_64.txt
output_result/csv_output/: error_vs_threshold_band.csv  fft_magnitude_filtered_1p_band.csv  fft_magnitude_filtered_40p_band.csv  fft_magnitude_filtered_50p_band.csv  fft_magnitude_filtered_75p_band.csv  fft_magnitude_filtered_85p_band.csv  fft_magnitude_filtered_90p_band.csv  fft_magnitude_filtered_90p_magnitude.csv  fft_magnitude_filtered_95p_band.csv  fft_magnitude_filtered_95p_magnitude.csv  fft_output_2d.csv
output_result/mpi/1D/: hybrid_p16_t16.txt  hybrid_p1_t16.txt  hybrid_p8_t4.txt  hybrid_p8_t8.txt
output_result/mpi/1D_inverse/: hybrid_p16_t16.txt  hybrid_p16_t4.txt  hybrid_p4_t4.txt  hybrid_p4_t8.txt
output_result/mpi/2D/: hybrid_p1_t16.txt  hybrid_p4_t8.txt  hybrid_p8_t4.txt
output_result/mpi/2D_inverse/: hybrid_p1_t16.txt  hybrid_p4_t4.txt  hybrid_p8_t8.txt
output_result/sequential/1D/: iterative_fft_timings.txt  recursive_fft_timings.txt
src/: cpu_main.cpp  fourier_transform.cpp  gpu_main.cu  gpu_test.cu  image_compression_main.cpp  main.cpp  mpi_main.cpp  mpi_main_inverse.cpp  parameter_class.hpp
test/: cpu_mpi_test.cpp  cpu_test.cpp  fourier_testing.cpp  gpu_test.cu  gpu_test_1D.cu  gpu_test_2D.cu  mpi01.cpp
